--- a/app/Views/layout/_sidebar.latte
+++ b/app/Views/layout/_sidebar.latte
@@ -13,7 +13,7 @@
 			<span>Home</span>
 		</a>
 	</li>
-	<!-- <hr class="sidebar-divider my-0"> -->
+	<hr class="sidebar-divider my-0">
 	<!-- <li class="nav-item"> -->
 	<!--   <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseSosmed"> -->
 	<!--     <i class="fal fa-fw fa-tools"></i> -->
@@ -51,31 +51,35 @@
 			<i class="fal fa-fw fa-globe"></i>
 			<span>SEO Tools</span>
 		</a>
-	<!--   <div id="collapseSEO" class="collapse" data-parent="#accordinSidebar"> -->
-	<!--     <div class="collapse-inner rounded py-2 bg-light"> -->
-	<!--       <h5 class="collapse-header">SEO Tools</h5> -->
+		<div id="collapseSEO" class="collapse" data-parent="#accordinSidebar">
+			<div class="collapse-inner rounded py-2 bg-light">
+				<h5 class="collapse-header">SEO Tools</h5>
 	<!--       <a href="{base_url()}tools/freeproxy" class="collapse-item"> -->
 	<!--         <i class="fal fa-shield-alt fa-fw"></i> -->
 	<!--         <span>Free Proxy</span> -->
 	<!--       </a> -->
-	<!--       <a href="{base_url()}tools/whois" class="collapse-item"> -->
-	<!--         <i class="fal fa-fw fa-globe"></i> -->
-	<!--         <span>Whois Lookup</span> -->
-	<!--       </a> -->
-	<!--       <a href="{base_url()}tools/reverseip" class="collapse-item"> -->
-	<!--         <i class="fal fa-fw fa-share"></i> -->
-	<!--         <span>Reverse IP</span> -->
-	<!--       </a> -->
-	<!--       <a href="{base_url()}tools/dns" class="collapse-item"> -->
-	<!--         <i class="fal fa-fw fa-globe"></i> -->
-	<!--         <span>DNS Lookup</span> -->
-	<!--       </a> -->
-	<!--       <a href="{base_url()}tools/portscanner" class="collapse-item"> -->
-	<!--         <i class="fal fa-eye fa-fw"></i> -->
-	<!--         <span>Port Scanner</span> -->
-	<!--       </a> -->
-	<!--     </div> -->
-	<!--   </div> -->
+				<a href="{base_url()}tools/whois" class="collapse-item">
+					<i class="fal fa-fw fa-globe"></i>
+					<span>Whois Lookup</span>
+				</a>
+				<a href="{base_url()}tools/reverseip" class="collapse-item">
+					<i class="fal fa-fw fa-share"></i>
+					<span>Reverse IP (Coming Soon)</span>
+				</a>
+				<a href="{base_url()}tools/dns" class="collapse-item">
+					<i class="fal fa-fw fa-globe"></i>
+					<span>DNS Lookup (Coming Soon)</span>
+				</a>
+				<a href="{base_url()}tools/portscanner" class="collapse-item">
+					<i class="fal fa-eye fa-fw"></i>
+					<span>Port Scanner (Coming Soon)</span>
+				</a>
+				<a href="{base_url()}tools/portscanner" class="collapse-item">
+					<i class="fal fa-eye fa-fw"></i>
+					<span>Subdomain Scanner (Coming Soon)</span>
+				</a>
+			</div>
+		</div>
 	</li>
 	<!-- <hr class="sidebar-divider my-0"> -->
 	<!-- <li class="nav-item"> -->
