--- a/app/Views/assets/css.latte
+++ b/app/Views/assets/css.latte
@@ -24,5 +24,5 @@
 <script src="{base_url()}assets/plugins/waves/waves.min.js"></script>
 <script src="{base_url()}assets/plugins/datatables/jquery.dataTables.min.js"></script>
 <script src="{base_url()}assets/plugins/datatables/dataTables.bootstrap4.min.js"></script>
-<!-- <script src="{base_url()}assets/plugins/ionicon/dist/ionicons.js"></script>  -->
+<script src="{base_url()}assets/plugins/ionicon/ionicons.js"></script>
 
