--- a/app/Views/assets/js.latte
+++ b/app/Views/assets/js.latte
@@ -1,4 +1,5 @@
 
 <!-- Javascript -->
+<script src="{base_url()}assets/js/console.js"></script>
 <script src="{base_url()}assets/js/functions.js"></script>
 <script src="{base_url()}assets/js/main.js"></script>
