--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -321,6 +321,12 @@ table.dataTable {
   background-image: linear-gradient(40deg, rgba(240, 240, 240, 0.1) 16%, rgba(240, 240, 240, 0.1) 17%, rgba(240, 240, 240, 0.05) 17%, rgba(240, 240, 240, 0.05) 23%, transparent 10%, transparent 75%, rgba(240, 240, 240, 0.05) 78%, rgba(240, 240, 240, 0.05) 84%, rgba(240, 240, 240, 0.1) 84%, rgba(240, 240, 240, 0.1));
   box-shadow: 0 8px 10px rgba(255, 255, 255, 0.4);
 }
+[data-theme="dark"] .jumbotron {
+  background-color: #283848;
+}
+[data-theme="dark"] .jumbotron pre {
+  color: #EAECEE !important;
+}
 
 @media (min-width: 768px) {
   [data-theme="dark"] .sidebar.toggled .nav-item .collapse .collpase-inner, [data-theme="dark"] .sidebar.toggled .nav-item .collapsing .collpase-inner, [data-theme="dark"] .sidebar .nav-item .collapse .collpase-inner, [data-theme="dark"] .sidebar .nav-item .collapsing .collpase-inner {
@@ -457,6 +463,73 @@ table.dataTable {
     transform: rotate(360deg);
   }
 }
+@keyframes slideInDown {
+  0% {
+    transform: translate3d(0, -100%, 0);
+    visibility: visible;
+    opacity: 0;
+  }
+  100% {
+    transform: translate3d(0, 0, 0);
+    opacity: 1;
+  }
+}
+@keyframes slideOutDown {
+  0% {
+    transform: translate3d(0, 0, 0);
+    opacity: 1;
+  }
+  100% {
+    transform: translate3d(0, -100%, 0);
+    visibility: hidden;
+    opacity: 0;
+  }
+}
+.spinner-double-loader-wrapper {
+  width: 100%;
+  height: 100px;
+  overflow: hidden;
+}
+
+.spinner-double-loader {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  transform: translateZ(0) scale(1);
+  backface-visibility: hidden;
+  transform-origin: center center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.spinner-double-loader div {
+  box-sizing: border-box !important;
+}
+.spinner-double-loader > div {
+  position: absolute;
+  width: 4rem;
+  height: 4rem;
+  vertical-align: text-bottom;
+  border: 0.25em solid;
+  border-color: #f8b26a transparent #f8b26a transparent;
+  border-radius: 50%;
+  animation: spin 1s linear infinite;
+}
+.spinner-double-loader > div:nth-child(2) {
+  width: 2.5rem;
+  height: 2.5rem;
+  animation: spin 1s linear infinite reverse;
+  border-color: #4e73de transparent #4e73de transparent;
+}
+
+.slideInDown {
+  animation: slideInDown 1s ease-in-out forwards;
+}
+
+.slideOutDown {
+  animation: slideOutDown 1s ease-in-out forwards;
+}
+
 .sidebar {
   background-color: #4e73df;
   background-image: linear-gradient(180deg, #4e73df 10%, #224abe 100%);
