--- a/assets/scss/_dark.scss
+++ b/assets/scss/_dark.scss
@@ -285,6 +285,12 @@
 		background-image: linear-gradient(40deg, rgba($color: #f0f0f0, $alpha: 0.1) 16%,rgba($color: #f0f0f0, $alpha: 0.1) 17%,rgba($color: #f0f0f0, $alpha: 0.05) 17%,rgba($color: #f0f0f0, $alpha: 0.05) 23%, transparent 10%, transparent 75%,rgba($color: #f0f0f0, $alpha: 0.05) 78%,rgba($color: #f0f0f0, $alpha: 0.05) 84%,rgba($color: #f0f0f0, $alpha: 0.1) 84%, rgba($color: #f0f0f0, $alpha: 0.1));
 		box-shadow: 0 8px 10px rgba($color: #fff, $alpha: 0.4);
 	}
+	.jumbotron {
+		background-color: #283848;
+		pre {
+		color: #EAECEE !important;
+		}
+	}
 }
 @include media-breakpoint-up(md) {
 	[data-theme="dark"] {
